Refine editing hints in ChromeVox

During touch, we want to either announce 'is editing' is a text field is focused, or 'double tap to start editing' when a text field is in ChromeVox range, but not focused.

We want to do this only for touch because keyboard commands,e .g. search+right, will automatically try to focus the text field. Since ChromeVox preemptively reads the new element (and doesn't wait for the focus event on the text field), the output here would be incomplete until the focus event.

Fortunately, we only really need this announcement for touch.

Bug: 869880
Test: manual
Change-Id: I0d25cb28ece2b1a95658108fb5d032a91b705064
Reviewed-on: https://chromium-review.googlesource.com/1162627
Commit-Queue: David Tseng <dtseng@chromium.org>
Reviewed-by: Dominic Mazzoni <dmazzoni@chromium.org>
Cr-Commit-Position: refs/heads/master@{#580696}
Former-commit-id: 3b0a1eddc750df9b14eb2fd2c99d613e4761b59b